# SD_Projekt1

./: Analysis.cpp  Analysis.hpp  ArrayList.cpp  ArrayList.h  ArrayList.hpp  CMakeLists.txt  Collection.cpp  Collection.hpp  DoublyLinkedList.cpp  DoublyLinkedList.hpp  LinkedList.cpp  LinkedList.hpp  Utils.cpp  Utils.hpp  main.cpp
results/: ArrayListBackAdd.csv  ArrayListBackRemove.csv  ArrayListFrontAdd.csv  ArrayListFrontRemove.csv  ArrayListRandomAdd.csv  ArrayListRandomFind.csv  ArrayListRandomRemove.csv  DoublyLinkedListBackAdd.csv  DoublyLinkedListBackRemove.csv  DoublyLinkedListFrontAdd.csv  DoublyLinkedListFrontRemove.csv  DoublyLinkedListRandomAdd.csv  DoublyLinkedListRandomFind.csv  DoublyLinkedListRandomRemove.csv  LinkedListBackAdd.csv  LinkedListBackRemove.csv  LinkedListFrontAdd.csv  LinkedListFrontRemove.csv  LinkedListRandomAdd.csv  LinkedListRandomFind.csv  LinkedListRandomRemove.csv
